--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -29,6 +29,11 @@ public with sharing class FlowControlLoopsCollections {
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
     public static String helloWorld(Integer x, Integer y) {
+        
+
+        if (x>y){
+            return 'Hello World!';
+        }
         return null; // Replace null with the variable you used to store the result
     }
 
@@ -42,7 +47,7 @@ public with sharing class FlowControlLoopsCollections {
      * @return true if the person is eligible to vote, false otherwise.
      */
     public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+        return age>=18; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -56,9 +61,21 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer findMax(Integer num1, Integer num2) {
         // Initialize largestNum as null
-        Integer largestNum = null;
 
-        return null; // Replace null with the variable you used to store the result
+         if((num1 == null|| num2 == null) ){
+            return null;
+         }
+
+        Integer largestNum = null;
+        if(num1 == num2){
+            largestNum = num1;
+        }else if(num1 > num2){
+             largestNum = num1;
+        }else{
+            largestNum = num2;
+        }
+
+        return largestNum; // Replace null with the variable you used to store the result
     }
 
 
@@ -71,7 +88,20 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+
+    if(a == null){
+         return null;
+    }else if (a == 0){
+          return 'Zero';
+    }else if(a>0){
+        return 'Positive';
+    }else{
+        return 'Negative';
+    }
+    
+       
+
+
     }
 
     /**
@@ -83,7 +113,18 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
     public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+
+        
+    if( a == null){
+         return null;
+    }else if (Math.mod(a, 2) == 0){
+          return 'Even';
+    }else{
+        return 'Odd';
+    }
+    
+
+         // Replace null with the variable you used to store the result
     }
 
     /**
@@ -94,7 +135,15 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
+
+
+        if( a == null){
+            return 'Null';
+        }else if (a == ''){
+            return 'Empty';
+        }else{
+            return 'Contains Text';
+        }
     }
 
     /**
@@ -110,9 +159,18 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
+        if( score >= 90){
+            return 'A';
+        }else if (score >= 80){
+            return 'B';
+        }else if (score >= 70){
+            return 'C';
+        }else if (score >= 60){
+            return 'D';
+        }else {
+            return 'F';
+        }
     }
-
 
     /**
      * Question 8
@@ -122,13 +180,14 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
 
-        return null; // Replace null with the variable you used to store the result
+         Integer sum = 0;
+         for ( Integer i=0; i<intLimit;i++){
+            sum+=i+1;
+   
+         }
+        
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -141,13 +200,15 @@ public with sharing class FlowControlLoopsCollections {
         // Initialize the result String
 
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
+        
+        String word='';
+         for (Integer i = 0 ; i<3 ; i++){
+            word += 'Hello World!; '; 
             
          }
-        */
+       
 
-        return null; // Replace null with the variable you used to store the result
+        return word; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -164,15 +225,16 @@ public with sharing class FlowControlLoopsCollections {
         // Initialize the result String
 
         // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
-        }
-        */
+        String init ='';
+       for (Integer i = 0 ; i<repeatCount-1 ; i++){
+            init += inputString +'; '; 
+            
+         }
+           init += inputString;
+        
 
         // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        return init; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -184,13 +246,18 @@ public with sharing class FlowControlLoopsCollections {
     public static List<Integer> createAndPopulateList() {
         // Create a new list of integers
 
+        List<Integer> ints = new List<Integer>{
+            1,
+            2,
+            3
+        };
         // Add the integers 1, 2, and 3 to the list
         // add 1
         // add 2
         // add 3
 
         // Return the populated list
-        return null; // Replace null with the variable you used to store the result
+        return ints; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -203,10 +270,10 @@ public with sharing class FlowControlLoopsCollections {
         // Create a new list of integers and add numbers 1 to 5
         List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
 
-        // Remove the 3rd element (number 3) from the list
+        numberList.remove(2);
         
         // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -217,15 +284,15 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers from 1 to 'n'.
      */
     public static List<Integer> createIntegerList(Integer n) {
-        // Create a new list of integers 
+       List<Integer> ints = new List<Integer>(); 
 
-        /*
-        for() {
-            //add integer to the list
+        
+        for(Integer i = 0; i<n ; i++) {
+           ints.add(i+1);
         }
-        */ 
+       
 
-        return null; // Replace null with the variable you used to store the result
+        return ints; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -240,9 +307,16 @@ public with sharing class FlowControlLoopsCollections {
         // Create a new Set of strings
         Set<String> stringSet = new Set<String>();
 
-        //add strings to the set
+        for (String ch : inputList) {
 
-        return null; // Replace null with the variable you used to store the result
+            if (!stringSet.contains(ch)) {
+                stringSet.add(ch);
+                
+            }
+            
+        }
+
+        return stringSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -253,12 +327,19 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer sumPositiveIntegers() {
         List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
+        integer sum=0;
 
-        // Loop through the list of integers
-            // if the number is negative skip this iteration
+        for (Integer num : numbers) {
+
+            if (num > 0) {
+               sum+=num;
+                
+            }
+            
+        }
         
 
-        return null; // Replace null with the variable you used to store the result
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -272,10 +353,20 @@ public with sharing class FlowControlLoopsCollections {
     public static Integer findWordInList(String wordToFind, List<String> words) {
         // The variable to store the index of the word
 
-        // Loop through the list of words
-            // If the current word is the word to find, exit the loop
+       
 
-        return null; // Replace null with the variable you used to store the result
+          for (String word : words) {
+
+            if (word == wordToFind) {
+
+             return words.indexOf(wordToFind);
+                
+            }
+            
+            
+        }
+
+        return -1; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -289,7 +380,19 @@ public with sharing class FlowControlLoopsCollections {
         // The list of money in the wallet, represented in dollars and cents
         List<Decimal> moneyInWallet = new List<Decimal>{0.50, 10, 3.84, 24.60, 9.08, 50, 4.90}; //DO NOT CHANGE
 
-        return null; // Replace null with the variable you used to store the result
+            Decimal sum = 0;
+           for (Decimal num : moneyInWallet) {
+
+            if (sum < 40) {
+
+             sum+= num;
+                
+            }
+            
+            
+        }
+
+        return sum; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -300,7 +403,15 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Map<String, Integer> addItemsToMap() {
         // Initialize an empty Map
+        Map<String, Integer> furits = new Map<String, Integer>();
 
+        furits.put('Apples', 5);
+        furits.put('Oranges', 10);
+        furits.put('Bananas', 15);
+        furits.put('Pears', 20);
+        furits.put('Grapes', 25);
+
+        
         // Add key-value pairs to the Map
         // add Apples => 5
         // add Oranges => 10
@@ -308,7 +419,7 @@ public with sharing class FlowControlLoopsCollections {
         // add Pears => 20
         // add Grapes => 25
 
-        return null; // Replace null with the variable you used to store the result
+        return furits; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -329,10 +440,20 @@ public with sharing class FlowControlLoopsCollections {
         // add Sam Brown => 55000
         // add Alice Johnson => 65000
 
+         Map<String, Integer> employees = new Map<String, Integer>();
+
+        employees.put('John Doe', 50000);
+        employees.put('Jane Smith', 60000);
+        employees.put('Sam Brown', 55000);
+        employees.put('Alice Johnson', 65000);
+
+        
+        
+
         // Get the salary of the employee
 
         // Return the salary of the employee, or null if the employee is not found in the Map
-        return null; // Replace null with the variable you used to store the result
+        return employees.get(employeeName); // Replace null with the variable you used to store the result
     }
 
     /**
@@ -355,14 +476,30 @@ public with sharing class FlowControlLoopsCollections {
         // add Sam Brown => 55000
         // add Alice Johnson => 65000
 
+        employeeSalaries.put('John Doe', 50000);
+        employeeSalaries.put('Jane Smith', 60000);
+        employeeSalaries.put('Sam Brown', 55000);
+        employeeSalaries.put('Alice Johnson', 65000);
+
         // Initialize a list to store the names of high paid employees
+
+        List<String> emploNames = new List<String>();
+
+        for(String name : employeeSalaries.keySet()) {
+
+            if(employeeSalaries.get(name)>55000){
+                emploNames.add(name);
+            }
+            
+        }
+
 
         // Iterate over the Map using a for loop
             // Check if the salary of the employee is more than 55000
                 // Add the employee to the list of high paid employees
 
         // Return the list of high paid employees
-        return null; // Replace null with the variable you used to store the result
+        return emploNames; // Replace null with the variable you used to store the result
     }
 
 }
